--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
